add auth & file upload
